--- a/UBCollecting/app/src/main/res/values/strings_fieldtrip.xml
+++ b/UBCollecting/app/src/main/res/values/strings_fieldtrip.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="fieldtrip_name_label">Field Trip Name</string>
-    <string name="fieldtrip_start_date_label">Field Trip Start Date</string>
-    <string name="fieldtrip_end_date_label">Field Trip End Date</string>
+    <string name="fieldtrip_start_date_label">Choose Start Date</string>
+    <string name="fieldtrip_end_date_label">Choose End Date</string>
 </resources>
