--- a/UBCollecting/app/src/main/res/layout/numbered_list_item_view.xml
+++ b/UBCollecting/app/src/main/res/layout/numbered_list_item_view.xml
@@ -13,10 +13,19 @@
         android:text="1"/>
     <TextView
         android:id="@+id/numbered_list_item_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignStart="@id/numbered_list_item_number_view"
         android:layout_margin="5pt"
         android:text="test"/>
+
+    <ImageView
+        android:id="@+id/numbered_list_item_drag_handle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="5pt"
+        android:src="@drawable/ic_drag_handle_black_24dp"/>
+
 
 </RelativeLayout>
