--- a/UBCollecting/app/src/main/res/values/colors.xml
+++ b/UBCollecting/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#005bbb</color>
     <color name="colorPrimaryDark">#002f56</color>
     <color name="colorAccent">#e56a54</color>
+    <color name="white">#FFFFFF</color>
 </resources>
