--- a/UBCollecting/app/src/main/res/layout/activity_session.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_session.xml
@@ -14,17 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/session_label_label" />
-
-        <EditText
-            android:id="@+id/session_label_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10px"
             android:text="@string/session_name_label" />
 
         <EditText
@@ -36,10 +25,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10px"
-            android:text="@string/session_start_time_label" />
+            android:text="@string/session_label_label" />
 
         <EditText
-            android:id="@+id/session_start_time_field"
+            android:id="@+id/session_label_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -64,6 +53,13 @@
             android:id="@+id/session_description_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/session_update_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/update_button_label"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/session_submit_button"
