--- a/UBCollecting/app/src/main/res/layout/activity_user_landing.xml
+++ b/UBCollecting/app/src/main/res/layout/activity_user_landing.xml
@@ -26,7 +26,7 @@ android:layout_height="wrap_content">
     android:id="@+id/fieldtrip_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.buffalo.cse.ubcollecting.ui.UserLandingActivity">
+    tools:context="edu.buffalo.cse.ubcollecting.ui.interviewer.UserLandingActivity">
     </android.support.v7.widget.RecyclerView>
 
 
