--- a/UBCollecting/app/src/main/res/values/strings_user.xml
+++ b/UBCollecting/app/src/main/res/values/strings_user.xml
@@ -4,5 +4,7 @@
     <string name="create_fieldtrip">Create New Field Trip </string>
     <string name="active_fieldtrips">Please Choose an Active Field Trip to Continue: </string>
     <string name="choose_session">Please Choose a Session to Continue: </string>
+    <string name="choose_questionnnaire">Please Select a Questionnaire: </string>
+
 
 </resources>
